WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
97313
[BlackBerry] Wrong seperator for viewport meta in Popup scripts
https://bugs.webkit.org/show_bug.cgi?id=97313
Summary
[BlackBerry] Wrong seperator for viewport meta in Popup scripts
Charles Wei
Reported
2012-09-21 02:37:18 PDT
The valid seperator for viewport meta is ',' instead of ';'. We are using the wrong seperator in PopupDialogBlackBerry.cpp
Attachments
Patch
(1.78 KB, patch)
2012-09-21 03:01 PDT
,
Charles Wei
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Charles Wei
Comment 1
2012-09-21 03:01:37 PDT
Created
attachment 165101
[details]
Patch
Yong Li
Comment 2
2012-09-21 07:09:06 PDT
Comment on
attachment 165101
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=165101&action=review
> Source/WebKit/blackberry/ChangeLog:3 > + Wrong seperator for viewport meta in Popup scripts
[BlackBerry] should be put there as other changes. it seems minor as the changelog is in webkit/blackberry anyway.
Charles Wei
Comment 3
2012-09-21 07:50:54 PDT
Comment on
attachment 165101
[details]
Patch Commit
WebKit Review Bot
Comment 4
2012-09-21 07:59:28 PDT
Comment on
attachment 165101
[details]
Patch Clearing flags on attachment: 165101 Committed
r129228
: <
http://trac.webkit.org/changeset/129228
>
WebKit Review Bot
Comment 5
2012-09-21 07:59:31 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug