Wrong seperator for viewport meta in Popup scripts https://bugs.webkit.org/show_bug.cgi?id=97313

Reviewed by Yong Li.

The valid seperator for viewport meta is ',' instead of ';'.

* WebCoreSupport/PagePopupBlackBerry.cpp:
(WebCore::PagePopupBlackBerry::generateHTML):


Canonical link: https://commits.webkit.org/115274@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129228 268f45cc-cd09-0410-ab3c-d52691b4dbfc